--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.15",
