--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "esewajs": "^2.0.0",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
